--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ nvidia-graphics-drivers (319.32-1) UNRELEASED; urgency=low
   * Update nv-readme.ids.
   * Update lintian overrides.
   * Update debian/copyright: Upstream license has changed §2.1.1.
+  * debian/{rules,watch}: Add armhf driver to generated .orig.tar.gz.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 01 Jul 2013 12:19:04 +0200
 
