--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
   * Rename metapackage nvidia-glx to nvidia-driver. Add transitional package.
   * Use new '${nvidia}' substvar instead of 'nvidia${nvidia-legacy}'.
   * NEWS: Drop news items concerning upgrades to squeeze.
+  * debian/rules: Apply patches from debian/patches-manual/ after unpacking.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 01:54:19 +0200
 
