--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
   * Use new '${nvidia}' substvar instead of 'nvidia${nvidia-legacy}'.
   * NEWS: Drop news items concerning upgrades to squeeze.
   * debian/rules: Apply patches from debian/patches-manual/ after unpacking.
+  * man-fixes-nvidia-smi.patch: New, fix hyphen vs. minus sign, wrapping, and
+    spelling in nvidia-smi manpage.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 01:54:19 +0200
 
