--- a/debian/changelog
+++ b/debian/changelog
@@ -6,11 +6,11 @@ nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
   * libcuda1: Add Suggests: nvidia-cuda-mps.
   * Drop support for backporting to squeeze.
   * Rename metapackage nvidia-glx to nvidia-driver. Add transitional package.
-  * Use new '${nvidia}' substvar instead of 'nvidia${nvidia-legacy}'.
+  * Use new '${nvidia}' substvar instead of 'nvidia${nvidia:Legacy}'.
   * NEWS: Drop news items concerning upgrades to squeeze.
   * debian/rules: Apply patches from debian/patches-manual/ after unpacking.
-  * man-fixes-nvidia-smi.patch: New, fix hyphen vs. minus sign, wrapping, and
-    spelling in nvidia-smi manpage.
+  * man-fixes-nvidia-smi.patch: New patch, fix hyphen vs. minus sign,
+    wrapping, and spelling in nvidia-smi manpage.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 01:54:19 +0200
 
