--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
   * Rename package nvidia-cuda-proxy to nvidia-cuda-mps: Upstream has renamed
     the programs nvidia-cuda-proxy-* to nvidia-cuda-mps-* in release 319.xx.
   * libcuda1: Add Suggests: nvidia-cuda-mps.
+  * libcuda1: Add Provides: libcuda-5.0-1.
   * Drop support for backporting to squeeze.
   * Rename metapackage nvidia-glx to nvidia-driver. Add transitional package.
   * Use new '${nvidia}' substvar instead of 'nvidia${nvidia:Legacy}'.
