--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,20 @@
-nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.88-4) unstable; urgency=low
 
-  * nvidia-libopencl1: Prefer nvidia-opencl-icd over opencl-icd.
+  * Rename metapackage nvidia-glx to nvidia-driver. Add transitional package.
+  * Use new '${nvidia}' substvar instead of 'nvidia${nvidia:Legacy}'.
+  * debian/rules: Generalize control file renaming for legacy builds.
   * Rename package nvidia-cuda-proxy to nvidia-cuda-mps: Upstream has renamed
     the programs nvidia-cuda-proxy-* to nvidia-cuda-mps-* in release 319.xx.
   * libcuda1: Add Suggests: nvidia-cuda-mps.
   * libcuda1: Add Provides: libcuda-5.0-1.
+  * nvidia-libopencl1: Prefer nvidia-opencl-icd over opencl-icd.
   * Drop support for backporting to squeeze.
-  * Rename metapackage nvidia-glx to nvidia-driver. Add transitional package.
-  * Use new '${nvidia}' substvar instead of 'nvidia${nvidia:Legacy}'.
-  * debian/rules: Generalize control file renaming for legacy builds.
   * NEWS: Drop news items concerning upgrades to squeeze.
   * debian/rules: Apply patches from debian/patches-manual/ after unpacking.
   * man-fixes-nvidia-smi.patch: New patch, fix hyphen vs. minus sign,
     wrapping, and spelling in nvidia-smi manpage.
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 01:54:19 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 04 Jul 2013 17:32:45 +0200
 
 nvidia-graphics-drivers (304.88-3) unstable; urgency=low
 
