--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (319.32-2) UNRELEASED; urgency=low
 
   * Fix armhf build.
+  * Update lintian overrides for armhf.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Jul 2013 22:36:53 +0000
 
