--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (304.88-5) UNRELEASED; urgency=low
+
+  * nvidia-kernel-source: Compress source tarball with xz. Update B-D, Depends
+    accordingly and Break older module-assistant versions.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 06 Jul 2013 20:33:50 +0200
+
 nvidia-graphics-drivers (304.88-4) unstable; urgency=low
 
   * Rename metapackage nvidia-glx to nvidia-driver. Add transitional package.
