do not ship nvidia-libopencl1.symbols in favor of nvidia-libopencl1.shlibs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3976 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (304.88-5) UNRELEASED; urgency=low
   * nvidia-kernel-source: Compress source tarball with xz. Update B-D, Depends
     accordingly and Break older module-assistant versions.
   * conftest.h: Add ARM support.
+  * Do not install nvidia-libopencl1.symbols in favor of redirecting to the
+    virtual libopencl1 via nvidia-libopencl1.shlibs.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 06 Jul 2013 20:33:50 +0200
 
