introduce nvidia:kmod:binary substvar
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3980 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ nvidia-graphics-drivers (304.88-5) UNRELEASED; urgency=low
   * use-nv-kernel-ARCH.o_shipped.patch: ... and updated.
   * not-silent.patch: New.
   * linux3.patch: Removed, obsolete.
+  * Add new substvars nvidia:kmod:source, nvidia:kmod:binary,
+    nvidia:kmod:Description for declaring kernel module relationships.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 06 Jul 2013 20:33:50 +0200
 
