--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (304.88-5) UNRELEASED; urgency=low
   * nvidia-kernel-source: Compress source tarball with xz. Update B-D, Depends
     accordingly and Break older module-assistant versions.
   * conftest.h: Add ARM support.
+  * nvidia-detect: Add support for jessie.
   * Do not install nvidia-libopencl1.symbols in favor of redirecting to the
     virtual libopencl1 via nvidia-libopencl1.shlibs.
   * debian/rules: Generic handling of architecture lists, unpacking, renaming,
