--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (319.32-2) UNRELEASED; urgency=low
 
   * Fix armhf build.
   * Update lintian overrides for armhf.
+  * nvidia-alternative: Add support for arm-linux-gnueabihf, bump required
+    glx-alternative-nvidia version.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Jul 2013 22:36:53 +0000
 
