add patches for kernel 3.10 support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4025 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (304.88-6) UNRELEASED; urgency=low
+
+  * kernel-3.10-{i2c,procfs}.patch: New patches to fix compilation with
+    Linux 3.10.  (Closes: #717311, #717361, #714981)
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 22 Jul 2013 12:40:09 +0200
+
 nvidia-graphics-drivers (304.88-5) unstable; urgency=low
 
   * nvidia-kernel-source: Compress source tarball with xz. Update B-D, Depends
