mention documentation updates
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4029 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (304.88-6) unstable; urgency=low
 
   * kernel-3.10-{i2c,procfs}.patch: New patches to fix compilation with
     Linux 3.10.  (Closes: #717311, #717361, #714981)
+  * Documentation updates.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 22 Jul 2013 12:52:11 +0200
 
