--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
+
+  * Add new substvars ${nvidia-alternative}, #NVIDIA_ALTERNATIVE#.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
+
 nvidia-graphics-drivers (304.88-6) unstable; urgency=low
 
   * kernel-3.10-{i2c,procfs}.patch: New patches to fix compilation with
