--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
 
   * Add new substvars ${nvidia-alternative}, #NVIDIA_ALTERNATIVE#.
+  * Rename the kernel module to nvidia-current.ko.
+  * nvidia-alternative: Add /etc/nvidia/nvidia-modprobe.conf (with the nvidia
+    alias) and a slave alternative /etc/modprobe.d/nvidia.conf to the nvidia
+    alternative.  (Closes: #685648)
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
 
