--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
   * nvidia-alternative: Add /etc/nvidia/nvidia-modprobe.conf (with the nvidia
     alias) and a slave alternative /etc/modprobe.d/nvidia.conf to the nvidia
     alternative.  (Closes: #685648)
+  * nvidia-alternative: Provides: ${nvidia-alternative}--kmod-alias.
+  * nvidia-kernel-dkms, nvidia-kernel-#KVERS#: Depend on
+    ${nvidia-alternative}--kmod-alias.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
 
