--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
   * nvidia-alternative: Provides: ${nvidia-alternative}--kmod-alias.
   * nvidia-kernel-dkms, nvidia-kernel-#KVERS#: Depend on
     ${nvidia-alternative}--kmod-alias.
+  * nvidia-libopencl1: Provide virtual package libopencl-1.1-1 and update
+    description.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
 
