--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
     ${nvidia-alternative}--kmod-alias.
   * nvidia-libopencl1: Provide virtual package libopencl-1.1-1 and update
     description.
+  * nvidia-libopencl1.symbols: Change the dependency template to always
+    generate a Depends: libopencl1, libopencl-1.1-1.
+  * nvidia-libopencl1.shlibs: Removed in favor of doing the same in .symbols.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
 
