--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (319.32-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (319.32-2) experimental; urgency=low
 
   * Fix armhf build.
   * Update lintian overrides for armhf.
@@ -8,7 +8,7 @@ nvidia-graphics-drivers (319.32-2) UNRELEASED; urgency=low
     Fixes kernel module building for kernel 3.10.  (Closes: #717184)
   * Refresh patches.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Jul 2013 22:36:53 +0000
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 01 Aug 2013 12:48:50 +0200
 
 nvidia-graphics-drivers (319.32-1) experimental; urgency=low
 
