--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ nvidia-graphics-drivers (325.08-1) UNRELEASED; urgency=low
     - Fixed a bug that caused the X server to crash when querying the current
       mode of disabled displays.
   * Refresh patches.
+  * Update symbols control files.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 04 Jul 2013 15:20:32 +0200
 
