new upstream release 325.15
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/325@4079 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (325.15-1) UNRELEASED; urgency=low
+
+  * New upstream short lived branch release 325.15 (2013-08-05).
+    <missing upstream changelog>
+  * Update nv-readme.ids.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Aug 2013 11:14:43 +0200
+
 nvidia-graphics-drivers (325.08-1) experimental; urgency=low
 
   * New upstream short lived branch release 325.08 (2013-07-01).
