drop kernel 3.10 patches - fixed upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/325@4080 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (325.15-1) UNRELEASED; urgency=low
   * New upstream short lived branch release 325.15 (2013-08-05).
     <missing upstream changelog>
   * Update nv-readme.ids.
+  * kernel-3.10-{i2c,procfs}.patch: Remove. Fixed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Aug 2013 11:14:43 +0200
 
