no longer prevent co-installation of different -dkms packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/325@4084 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ nvidia-graphics-drivers (325.15-1) UNRELEASED; urgency=low
   * kernel-3.10-{i2c,procfs}.patch: Remove. Fixed upstream.
   * Use a different approach to rename the kernel module that preserves its
     internal name as "nvidia".  (Closes: #718774)
+  * nvidia{,-legacy-*}-kernel-dkms are now co-installable.  (Closes: #685617)
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 07 Aug 2013 11:14:43 +0200
 
