don't ship PCI ID lists for legacy drivers (from branches/325@4076)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/319@4099 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (319.32-3) UNRELEASED; urgency=low
+
+  * nvidia-detect [armhf]: Don't ship PCI ID lists for legacy drivers.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Aug 2013 11:31:47 +0200
+
 nvidia-graphics-drivers (319.32-2) experimental; urgency=low
 
   * Fix armhf build.
