--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
 
   * Add new substvars ${nvidia-alternative}, #NVIDIA_ALTERNATIVE#.
-  * Rename the kernel module to nvidia-current.ko.
+  * Rename the kernel module to nvidia-current.ko but retain its internal name
+    as 'nvidia'.
   * nvidia-alternative: Add /etc/nvidia/nvidia-modprobe.conf (with the nvidia
     alias) and a slave alternative /etc/modprobe.d/nvidia.conf to the nvidia
     alternative.  (Closes: #685648)
