no longer prevent co-installation of different -dkms packages (from branches/325@4084)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4104 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
   * Add new substvars ${nvidia-alternative}, #NVIDIA_ALTERNATIVE#.
   * Rename the kernel module to nvidia-current.ko but retain its internal name
     as 'nvidia'.
+  * nvidia{,-legacy-*}-kernel-dkms are now co-installable.  (Closes: #685617)
   * nvidia-alternative: Add /etc/nvidia/nvidia-modprobe.conf (with the nvidia
     alias) and a slave alternative /etc/modprobe.d/nvidia.conf to the nvidia
     alternative.  (Closes: #685648)
