new patch to fix compilation with Linux 3.11-rc (from branches/325@4098)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4105 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
     - Implement conftest.sh sanity checks (only emit warning)
       nvidiafb_sanity_check (1.0-8174), xen_sanity_check (1.0-9746, 177.76),
       preempt_rt_sanity_check (325.08).
+  * kernel-3.11.patch: New patch to fix compilation with Linux 3.11-rc.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
 
