--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.88-7) unstable; urgency=low
 
   * Add new substvars ${nvidia-alternative}, #NVIDIA_ALTERNATIVE#.
   * Rename the kernel module to nvidia-current.ko but retain its internal name
@@ -40,7 +40,7 @@ nvidia-graphics-drivers (304.88-7) UNRELEASED; urgency=low
     304.108.
   * kernel-3.11.patch: New patch to fix compilation with Linux 3.11-rc.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 23 Jul 2013 02:56:45 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 17 Aug 2013 14:41:44 +0200
 
 nvidia-graphics-drivers (304.88-6) unstable; urgency=low
 
