--- a/debian/changelog
+++ b/debian/changelog
@@ -16,10 +16,11 @@ nvidia-graphics-drivers (304.88-7) unstable; urgency=low
   * Rename the kernel module to nvidia-current.ko but retain its internal name
     as 'nvidia'.
   * nvidia{,-legacy-*}-kernel-dkms are now co-installable.  (Closes: #685617)
-  * nvidia-alternative: Add /etc/nvidia/nvidia-modprobe.conf (with the nvidia
-    alias) and a slave alternative /etc/modprobe.d/nvidia.conf to the nvidia
-    alternative.  (Closes: #685648)
-  * nvidia-alternative: Provides: ${nvidia-alternative}--kmod-alias.
+  * nvidia-alternative:
+    - Add /etc/nvidia/nvidia-modprobe.conf (with the nvidia alias) and a slave
+      alternative /etc/modprobe.d/nvidia.conf to the nvidia alternative.
+      (Closes: #685648)
+    - Provides: ${nvidia-alternative}--kmod-alias.
   * nvidia-kernel-dkms, nvidia-kernel-#KVERS#: Depend on
     ${nvidia-alternative}--kmod-alias.
   * nvidia-libopencl1: Provide virtual package libopencl-1.1-1 and update
